--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">My Traffic</string>
+    <string name="top">จราจร</string>
+
+
+
+
+
+
+
+
+
 </resources>
